Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,7 @@ pr:
       - 'changelog.md'
       - 'packaging/*'
       - 'documentation/*'
+      - 'currency/*'
 
 jobs:
   - job: TestBranchFilter
