Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,18 +13,18 @@ trigger:
 
 pr:
   branches:
-    include:
-      - '*'
+    # include:
+    #   - '*'
     exclude:
       - 'currency/*'
-  paths:
-    include:
-      - '*'
-    exclude:
-      - 'VERSION.txt'
-      - 'changelog.md'
-      - 'packaging/*'
-      - 'documentation/*'
+  # paths:
+  #   include:
+  #     - '*'
+  #   exclude:
+  #     - 'VERSION.txt'
+  #     - 'changelog.md'
+  #     - 'packaging/*'
+  #     - 'documentation/*'
 
 jobs:
   - job: TestBranchFilter
