--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,31 +2,33 @@ trigger:
   branches:
     include:
       - main
-  # paths:
-  #   include:
-  #     - '*'
-  #   exclude:
-  #     - 'VERSION.txt'
-  #     - 'changelog.md'
-  #     - 'packaging/*'
-  #     - 'documentation/*'
+  paths:
+    include:
+      - '*'
+    exclude:
+      - 'VERSION.txt'
+      - 'changelog.md'
+      - 'packaging/*'
+      - 'documentation/*'
 
 pr:
   branches:
+    include:
+      - '*'
+    exclude:
+      - 'currency/*'
+  paths:
     # include:
     #   - '*'
     exclude:
-      - 'currency/*'
-  # paths:
-  #   include:
-  #     - '*'
-  #   exclude:
-  #     - 'VERSION.txt'
-  #     - 'changelog.md'
-  #     - 'packaging/*'
-  #     - 'documentation/*'
+      # - 'VERSION.txt'
+      # - 'changelog.md'
+      # - 'packaging/*'
+      # - 'documentation/*'
+      - '*'
 
 jobs:
   - job: TestBranchFilter
     steps:
       - script: echo "Testing branch and path filters"
+
