--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ pr:
       # - 'changelog.md'
       # - 'packaging/*'
       # - 'documentation/*'
-      - '*'
+      - 'currency/*'
 
 jobs:
   - job: TestBranchFilter
