Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,10 +14,12 @@ trigger:
 pr:
   branches:
     include:
-      - '*'  # Allow PRs to target any branch
+      - '*'
+    exclude:
+      - 'currency/*'
   paths:
     include:
-      - '*'  # Trigger for all files
+      - '*'
     exclude:
       - 'VERSION.txt'
       - 'changelog.md'
